--- a/bridge.html
+++ b/bridge.html
@@ -78,7 +78,7 @@
                     </p>
                 </div>
 
-                <a href="https://square.link/u/RDBg3rri" class="inline-block w-full bg-blue-600 text-white py-8 font-black uppercase tracking-[0.4em] text-3xl hover:bg-black transition-all italic industrial-shadow">
+                <a href="https://square.link/u/gCCvyGpp" class="inline-block w-full bg-blue-600 text-white py-8 font-black uppercase tracking-[0.4em] text-3xl hover:bg-black transition-all italic industrial-shadow">
                     Activate the Protocol for $37
                 </a>
                 
