--- a/index.html
+++ b/index.html
@@ -38,13 +38,7 @@
             </p>
 
             <div class="border-4 border-black p-6 md:p-10 industrial-shadow bg-slate-50">
-                <form action="https://static.mailerlite.com/webforms/submit/YOUR_FORM_ID" method="POST" class="flex flex-col gap-4 text-left">
-                    <input type="hidden" name="redirect" value="https://www.onequarterdollar.com/bridge.html">
-                    
-                    <input type="text" name="fields[name]" placeholder="YOUR NAME" required class="p-5 border-4 border-black font-black uppercase text-lg outline-none">
-                    <input type="email" name="fields[email]" placeholder="YOUR EMAIL" required class="p-5 border-4 border-black font-black uppercase text-lg outline-none">
-                    <button type="submit" class="bg-blue-600 text-white p-6 font-black uppercase tracking-[0.2em] text-xl hover:bg-black transition-all">Start the 30-Day Clock</button>
-                </form>
+                <div class="ml-embedded" data-form="UcrCoH"></div>
             </div>
         </section>
 
