--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         .deadline-red { color: #dc2626; }
         .section-divider { border-top: 4px solid #0f172a; margin-top: 5rem; padding-top: 5rem; }
     </style>
-</head>
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[]).push(arguments);},l=d.createElement(e),l.async=1,l.src=u,n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '1924779');
+</script></head>
 <body class="blueprint-bg">
 
     <div class="page-frame">
