--- a/index.html
+++ b/index.html
@@ -107,13 +107,7 @@
                 <h3 class="text-4xl md:text-5xl font-black uppercase tracking-tighter italic mb-4 text-center">Unlock the Protocol</h3>
                 <p class="mono text-xs text-blue-400 font-bold uppercase tracking-[0.3em] mb-10 text-center italic">Includes Full AI Technical Audit & Deployment Manual</p>
                 
-                <form action="https://static.mailerlite.com/webforms/submit/YOUR_FORM_ID" method="POST" class="space-y-4">
-                    <input type="hidden" name="redirect" value="https://www.onequarterdollar.com/bridge.html">
-                    
-                    <input type="text" name="fields[name]" placeholder="FULL NAME" required class="w-full p-6 border-4 border-blue-600 bg-white text-black font-black uppercase text-xl outline-none">
-                    <input type="email" name="fields[email]" placeholder="EMAIL ADDRESS" required class="w-full p-6 border-4 border-blue-600 bg-white text-black font-black uppercase text-xl outline-none">
-                    <button type="submit" class="w-full py-8 bg-blue-600 text-white font-black uppercase tracking-[0.4em] text-2xl hover:bg-white hover:text-black transition-all italic">Activate Your Quarter</button>
-                </form>
+                <div class="ml-embedded" data-form="jpkeHU"></div>
             </div>
         </section>
 
