--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="border-4 border-dashed border-black p-8 text-center bg-white">
                 <h4 class="mono text-xs font-black uppercase tracking-widest text-slate-400 mb-4">Integrity Verification</h4>
                 <p class="text-xl font-bold text-slate-800 leading-tight">
-                    Still in doubt? We submitted the OQEAD architecture to the top 3 AI models for a full audit. [cite: 1, 15]
+                    Still in doubt? We submitted the OQEAD architecture to the top 3 AI models for a full audit.
                 </p>
                 <a href="#ai-logs" class="mt-6 inline-block text-blue-600 font-black uppercase text-lg tracking-tight hover:underline">
                     Access the Full AI Technical Breakdown Below
@@ -88,15 +88,15 @@
             <h2 class="mono text-xs font-black text-slate-400 uppercase tracking-[0.4em] mb-16 italic text-center">--- AI Verification Log Excerpts ---</h2>
             <div class="space-y-16">
                 <div class="border-l-8 border-blue-600 pl-8">
-                    <p class="text-2xl font-black leading-tight text-slate-800 uppercase italic">"The OQEAD system is far more granular and execution-ready than traditional 'debt-free' survival plans." [cite: 1, 17, 23]</p>
+                    <p class="text-2xl font-black leading-tight text-slate-800 uppercase italic">"The OQEAD system is far more granular and execution-ready than traditional 'debt-free' survival plans." </p>
                     <p class="mono text-xs text-blue-600 mt-4 font-black uppercase tracking-widest italic">Grok (xAI) // Verified</p>
                 </div>
                 <div class="border-l-8 border-blue-600 pl-8">
-                    <p class="text-2xl font-black leading-tight text-slate-800 uppercase italic">"The 'Machine' visual identity creates an immediate psychological shift from 'consumer' to 'operator.'" [cite: 1, 18, 105]</p>
+                    <p class="text-2xl font-black leading-tight text-slate-800 uppercase italic">"The 'Machine' visual identity creates an immediate psychological shift from 'consumer' to 'operator.'" </p>
                     <p class="mono text-xs text-blue-600 mt-4 font-black uppercase tracking-widest italic">Google Gemini // Verified</p>
                 </div>
                 <div class="border-l-8 border-blue-600 pl-8">
-                    <p class="text-2xl font-black leading-tight text-slate-800 uppercase italic">"Overall Impact: A. Focusing on 'The Machine' over the individual is a market disruptor." [cite: 1, 19, 280]</p>
+                    <p class="text-2xl font-black leading-tight text-slate-800 uppercase italic">"Overall Impact: A. Focusing on 'The Machine' over the individual is a market disruptor." </p>
                     <p class="mono text-xs text-blue-600 mt-4 font-black uppercase tracking-widest italic">ChatGPT (OpenAI) // Verified</p>
                 </div>
             </div>
@@ -112,7 +112,7 @@
         </section>
 
         <footer class="text-center py-12 border-t-4 border-black bg-white">
-            <a href="https://www.skool.com/multiplier-lab" class="mono text-sm font-black text-blue-600 uppercase tracking-widest hover:underline">Join The Multiplier Lab on Skool [cite: 1, 376]</a>
+            <a href="https://www.skool.com/multiplier-lab" class="mono text-sm font-black text-blue-600 uppercase tracking-widest hover:underline">Join The Multiplier Lab on Skool </a>
             <p class="mono text-[10px] font-black text-slate-400 uppercase tracking-[0.5em] mt-4">Identity • Architecture • Mechanics</p>
             <p class="text-[10px] font-black uppercase text-slate-900 mt-2">One Quarter Enterprises LLC // 2026</p>
         </footer>
