--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
                 <div class="border-4 border-black p-8 bg-white industrial-shadow">
                     <span class="bg-black text-white text-xs mono px-3 py-1 font-bold">STAGE 01</span>
                     <h4 class="text-3xl font-black mt-4 uppercase italic">Setup your Legal Shield</h4>
-                    <p class="text-slate-600 mt-2 font-bold uppercase text-sm italic">Protect your future profits from the first dollar. [cite: 1, 92]</p>
+                    <p class="text-slate-600 mt-2 font-bold uppercase text-sm italic">Protect your future profits from the first dollar. </p>
                 </div>
                 <div class="border-4 border-black p-8 bg-white industrial-shadow">
                     <span class="bg-black text-white text-xs mono px-3 py-1 font-bold">STAGE 02</span>
                     <h4 class="text-3xl font-black mt-4 uppercase italic">Package your Product</h4>
-                    <p class="text-slate-600 mt-2 font-bold uppercase text-sm italic">Define your system and automate delivery mechanics. [cite: 1, 295]</p>
+                    <p class="text-slate-600 mt-2 font-bold uppercase text-sm italic">Define your system and automate delivery mechanics. </p>
                 </div>
                 <div class="border-4 border-black p-8 bg-white industrial-shadow">
                     <span class="bg-black text-white text-xs mono px-3 py-1 font-bold">STAGE 03</span>
                     <h4 class="text-3xl font-black mt-4 uppercase italic">Scale for Growth</h4>
-                    <p class="text-slate-600 mt-2 font-bold uppercase text-sm italic">Optimize for the 90-day profit window. [cite: 1, 140]</p>
+                    <p class="text-slate-600 mt-2 font-bold uppercase text-sm italic">Optimize for the 90-day profit window. </p>
                 </div>
             </div>
         </section>
