--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <h3 class="text-4xl md:text-5xl font-black uppercase tracking-tighter italic mb-4 text-center">Unlock the Protocol</h3>
                 <p class="mono text-xs text-blue-400 font-bold uppercase tracking-[0.3em] mb-10 text-center italic">Includes Full AI Technical Audit & Deployment Manual</p>
                 
-                <div class="ml-embedded" data-form="jpkeHU"></div>
-            </div>
+               <form action="https://static.mailerlite.com/webforms/submit/jpkeHU" method="POST" class="space-y-4">
+<input type="hidden" name="ml-submit-canvas" value="1">
         </section>
 
         <footer class="text-center py-12 border-t-4 border-black bg-white">
