--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         }) (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
         ml('account', '1924779');
     </script>
+<script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body class="blueprint-bg">
 
@@ -33,7 +34,7 @@
             
             <h1 class="text-5xl md:text-8xl font-black tracking-tighter leading-[0.9] uppercase italic mb-8">
                 Launch Your Business <br>
-                <span class="electric-blue">In 90 Days or Less.</span>
+                <span class="electric-blue">In 30 Days or Less.</span>
             </h1>
 
             <div class="h-3 w-48 bg-black mb-10 mx-auto md:mx-0"></div>
