--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
 
         <footer class="text-center py-12 border-t-4 border-black bg-white">
-            <a href=https://www.skool.com/the-multiplier-lab-6019/about?ref=6775ff97d2d2449c971ee35c79cd69fc class="mono text-sm font-black text-blue-600 uppercase tracking-widest hover:underline">Join The Multiplier Lab</a>
+            <a href=https://www.skool.com/the-multiplier-lab-6019/about class="mono text-sm font-black text-blue-600 uppercase tracking-widest hover:underline">Join The Multiplier Lab</a>
             <p class="text-[10px] font-black uppercase text-slate-400 mt-4 tracking-[0.5em]">One Quarter Enterprises LLC // 2026</p>
         </footer>
 
