--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <p class="mono text-blue-600 font-black text-xs uppercase tracking-[0.4em] mb-6 italic">Deployment Ready // Phase 01</p>
             
             <h1 class="text-5xl md:text-8xl font-black tracking-tighter leading-[0.9] uppercase italic mb-8">
-                Launch Your Business <br>
-                <span class="electric-blue">In 30 Days or Less.</span>
+                SYSTEM INITIALIZATION: <br>
+                <span class="electric-blue">THE PROFIT FLOW MANDATE</span>
             </h1>
 
             <div class="h-3 w-48 bg-black mb-10 mx-auto md:mx-0"></div>
