--- a/bridge.html
+++ b/bridge.html
@@ -25,7 +25,7 @@
                 OQ<span class="electric-blue">EAD</span> // Structural Deep-Dive
             </div>
             <div class="mono text-[10px] font-black uppercase tracking-widest text-slate-400">
-                Phase 01: The Three-Pipe Pipeline
+                Phase 01: The Three-Account Pipeline
             </div>
         </header>
 
