--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="h-3 w-48 bg-black mb-10 mx-auto md:mx-0"></div>
 
             <p class="text-2xl md:text-4xl font-black leading-[1.3] text-slate-900 mb-12 uppercase">
-                Stop managing accounts. Start directing flow. Install the <span class="underline decoration-blue-600 decoration-8 underline-offset-4 italic">Three-Pipe Pipeline</span> and mandate 100% of revenue into <span class="money-green italic">Systemization</span> before a single dollar is spent.
+                Stop managing accounts. Start directing flow. Install the <span class="underline decoration-blue-600 decoration-8 underline-offset-4 italic">Three-Account Pipeline</span> and mandate 100% of revenue into <span class="money-green italic">Systemization</span> before a single dollar is spent.
             </p>
 
             <div class="border-4 border-black p-6 md:p-10 industrial-shadow bg-slate-50">
