--- a/bridge.html
+++ b/bridge.html
@@ -47,7 +47,7 @@
         </section>
 
         <section class="max-w-4xl mx-auto px-6 py-10">
-            <h2 class="text-4xl font-black uppercase italic mb-8 border-b-4 border-black inline-block">The 3-Pipe Pipeline</h2>
+            <h2 class="text-4xl font-black uppercase italic mb-8 border-b-4 border-black inline-block">The 3-Account Pipeline</h2>
             <p class="text-xl font-black mb-10 italic uppercase">Slow Is Smooth. <span class="electric-blue">Smooth Is Fast.</span></p>
 
             
