--- a/bridge.html
+++ b/bridge.html
@@ -34,7 +34,7 @@
                 SEAL THE <span class="deadline-red">LEAKS.</span>
             </h1>
             <p class="text-2xl font-black uppercase mb-8 text-center md:text-left">
-                The Result of a 20-Year Search for the "One Way"
+                The Result of a 19-Year Search for the "wealth code"
             </p>
             
             <div class="border-4 border-black p-8 industrial-shadow bg-slate-50 mb-12">
