--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
         </section>
 
         <footer class="text-center py-12 border-t-4 border-black bg-white">
-            <p class="text-[10px] font-black uppercase text-slate-400 tracking-[0.5em]">One Quarter Enterprises LLC // 2026</p>
+            <p class="text-[10px] font-black uppercase text-slate-400 tracking-[0.5em]">System Disclosure & Liability Waiver
+
+The results mentioned in this preview (5-figure revenue, viral growth, media coverage) reflect specific execution and market conditions. They are exceptional results and are not typical for all users. Your financial outcomes will vary based on your business model, effort, and adherence to the architecture.
+
+Author's Disclaimer: Donald E.R. Wiggins and One Quarter Enterprises LLC are not financial advisors, certified public accountants, lawyers, or registered investment professionals. All content, recommendations, and blueprints are for educational and informational purposes only and should not be considered professional financial or legal advice. Always consult with a qualified professional before making significant financial decisions.
+
+Proprietary Notice: The OQEAD System is protected intellectual property. Unauthorized distribution of this material is prohibited.
+
+© 2026 One Quarter Enterprises LLC. All Rights Reserved.One Quarter Enterprises LLC // 2026</p>
         </footer>
     </div>
 
