--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Author's Disclaimer: Donald E.R. Wiggins and One Quarter Enterprises LLC are not
 
 Proprietary Notice: The OQEAD System is protected intellectual property. Unauthorized distribution of this material is prohibited.
 
-© 2026 One Quarter Enterprises LLC. All Rights Reserved.One Quarter Enterprises LLC // 2026</p>
+© 2026 One Quarter Enterprises LLC. All Rights Reserved</p>
         </footer>
     </div>
 
