--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         </div>
                         <ul class="text-sm md:text-lg font-bold uppercase space-y-6 italic text-slate-400">
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span>Accelerator + Tactical Toolkit,</span> <span class="text-white font-black">$1,997</span></li>
-                            <li class="flex justify-between border-b border-slate-800 pb-2"><span>Universal Family Flow Manual,</span> <span class="text-white font-black">$777</span></li>
+                            <li class="flex justify-between border-b border-slate-800 pb-2"><span>Universal Family Money Flow Manual,</span> <span class="text-white font-black">$777</span></li>
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span>The OQEAD Blueprint,</span> <span class="text-white font-black">$37</span></li>
                             <li class="flex justify-between pt-6 text-white font-black italic uppercase text-xl"><span>Exclusive Grade Card Proof,</span> <span class="text-green-500 font-black font-black uppercase italic">INCLUDED</span></li>
                         </ul>
