--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                             <p class="text-7xl md:text-9xl font-black italic tracking-tighter text-white uppercase text-center font-black text-center">$2,908</p>
                         </div>
                         <ul class="text-sm md:text-lg font-bold uppercase space-y-6 italic text-slate-400">
-                            <li class="flex justify-between border-b border-slate-800 pb-2 text-white font-black"><span>Accelerator + Tactical Toolkit,</span> <span class="text-white font-black">$1,997</span></li>
-                            <li class="flex justify-between border-b border-slate-800 pb-2"><span>Universal Family Money Flow Manual + HVA Scripting,</span> <span class="text-white font-black">$777</span></li>
+                            <li class="flex justify-between border-b border-slate-800 pb-2 text-white font-black"><span>Accelerator + Systemization Toolkit,</span> <span class="text-white font-black">$1,997</span></li>
+                            <li class="flex justify-between border-b border-slate-800 pb-2"><span>Universal Family Money Flow Manual + Systemization HVA Scripting,</span> <span class="text-white font-black">$777</span></li>
                             <li class="flex justify-between border-b border-slate-800 pb-2 text-white font-black"><span>Systemization Training Manual,</span> <span class="text-white font-black">$97</span></li>
                             <li class="flex justify-between border-b border-slate-800 pb-2"><span>The OQEAD Blueprint (Book),</span> <span class="text-white font-black">$37</span></li>
                             <li class="flex justify-between pt-6 text-white font-black italic uppercase text-xl"><span>Exclusive Grade Card Proof,</span> <span class="text-green-500 font-black font-black uppercase italic">INCLUDED</span></li>
