--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <p class="text-red-400 text-sm mt-2 uppercase font-bold">I finally found a way to plug the logic into a concrete system built for longevity and growth.</p>
                     </div>
 
-                    <p class="text-slate-400 text-base border-t border-slate-800 pt-6">I've documented the exact technical architecture I used to fix the leak and turn a "hustle" into a systemized machine. If you are tired of the "hustle" and failing at business, I can guarantee it is not your work ethic or lack of skills. It is that you need a system that can help you scale your capital ensuring steady continuous growth.</p>
+                    <p class="text-slate-400 text-base border-t border-slate-800 pt-6">I've documented the exact technical architecture I used to fix the leak and turn a "hustle" into a systemized machine. If you are tired of the "hustle" and failing at business, I can guarantee it is not your work ethic or lack of skills. It is that you need a system that can help you scale your capital ensuring steady continuous growth. Secure this Limited Time Offer Today!</p>
                     
                     <p class="text-white font-black text-xl uppercase italic text-center mt-8">Start directing the flow.</p>
                 </div>
