--- a/index.html
+++ b/index.html
@@ -440,17 +440,16 @@
 
             <!-- SECONDARY CAPTURE -->
             <div class="max-w-xl mx-auto mt-24 bg-slate-950 p-10 border-4 border-red-600 industrial-shadow text-center scarcity-pulse">
-                <div id="mlb2-35113893-bottom" class="ml-subscribe-form">
-                    <p class="mono text-xs text-red-500 font-black mb-2 italic uppercase tracking-widest">⚠️ Roster Status: 4/6 Filled</p>
-                    <p class="text-white font-bold uppercase mb-6 text-lg">Get the $2,908 System for $37<br><span class="text-red-500 text-sm">(Before the subsidy vanishes)</span></p>
-                    <form onsubmit="handleMandate(event)" class="space-y-4" data-form-id="bottom">
-                        <input type="text" name="name" required placeholder="FULL NAME" class="w-full p-4 mono text-sm bg-slate-800 border-2 border-slate-700 text-white font-black uppercase italic">
-                        <input type="email" name="email" required placeholder="PRIMARY EMAIL" class="w-full p-4 mono text-sm bg-slate-800 border-2 border-slate-700 text-white font-black uppercase italic">
-                        <button type="submit" id="submit-btn-bottom" class="w-full bg-red-600 text-white font-black py-6 uppercase italic border-2 border-white hover:bg-white hover:text-black transition-all tracking-tighter">SECURE FULL SYSTEM ($37)</button>
-                    </form>
-                    <p class="text-[10px] mono text-red-500 mt-4 uppercase font-black">2 Seats Remain • Then Price Resets to Full Retail</p>
-                </div>
-            </div>
+    <div id="mlb2-35113893-bottom" class="ml-subscribe-form">
+        <p class="mono text-xs text-red-500 font-black mb-2 italic uppercase tracking-widest">⚠️ Roster Status: 4/6 Filled</p>
+        <p class="text-white font-bold uppercase mb-6 text-lg">Get the $2,908 System for $37<br><span class="text-red-500 text-sm">(Before the subsidy vanishes)</span></p>
+        
+        <!-- MailerLite Embedded Form -->
+        <div class="ml-embedded" data-form="jpkeHU"></div>
+        
+        <p class="text-[10px] mono text-red-500 mt-6 uppercase font-black">2 Seats Remain • Then Price Resets to Full Retail</p>
+    </div>
+</div>
         </section>
 
         <!-- THE MACHINE -->
