--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <header class="max-w-4xl mx-auto text-center mb-12">
         <p class="alert-red font-bold tracking-widest uppercase mb-4 text-sm mono italic">// SYSTEMIC BRIEFING: OPERATIONAL AUDIT //</p>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight mb-6 uppercase italic text-white">
-            The <span class="electric-cyan">"Revenue Sieve"</span> That Silently Ruin Businesses.
+            The <span class="electric-cyan">Leak</span> That Silently Ruin Businesses.
         </h1>
         <p class="text-xl md:text-2xl font-medium text-slate-300">
             The "Chaos Tax" that burns through your hard-earned cash...and what to do to stop it
